[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Samus/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/mainhud/numerals/numerals.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/ui/map/MapGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Samus/HUD/ETank.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "open_main_map"
length = 0.5

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.35, 1.35 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "6"
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 4, 4 )
transform = Transform2D( 4, 0, 0, 4, 0, 0 )

[node name="MapGrid" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 552.0
margin_top = 8.0
margin_right = -1288.0
margin_bottom = -1024.0

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 247.0
margin_bottom = 26.0
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyDigits" type="Control" parent="CanvasLayer/TopBar"]
margin_right = 25.0
margin_bottom = 14.0
rect_min_size = Vector2( 25, 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Digit0" type="AnimatedSprite" parent="CanvasLayer/TopBar/EnergyDigits"]
position = Vector2( 6, 7 )
frames = ExtResource( 2 )
animation = "fontA"

[node name="Digit1" type="AnimatedSprite" parent="CanvasLayer/TopBar/EnergyDigits"]
position = Vector2( 19, 7 )
frames = ExtResource( 2 )
animation = "fontA"

[node name="ETanks" type="VBoxContainer" parent="CanvasLayer/TopBar"]
margin_left = 32.0
margin_right = 38.0
margin_bottom = 14.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row0" type="HBoxContainer" parent="CanvasLayer/TopBar/ETanks"]
margin_right = 6.0
margin_bottom = 6.0
custom_constants/separation = 2

[node name="ETank" parent="CanvasLayer/TopBar/ETanks/Row0" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 6.0
margin_bottom = 6.0

[node name="Row1" type="HBoxContainer" parent="CanvasLayer/TopBar/ETanks"]
margin_top = 8.0
margin_right = 6.0
margin_bottom = 14.0
custom_constants/separation = 2

[node name="ETank2" parent="CanvasLayer/TopBar/ETanks/Row1" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 6.0
margin_bottom = 6.0

[node name="WeaponIcons" type="HBoxContainer" parent="CanvasLayer/TopBar"]
margin_left = 45.0
margin_right = 145.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 14 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_main_map = SubResource( 1 )
